--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
         "postinstall": "npm run webdriver-update"
     },
     "dependencies": {
-        "@angular/common": "2.1.2",
-        "@angular/compiler": "2.1.2",
-        "@angular/core": "2.1.2",
-        "@angular/forms": "2.1.2",
-        "@angular/http": "2.1.2",
-        "@angular/platform-browser": "2.1.2",
-        "@angular/platform-browser-dynamic": "2.1.2",
-        "@angular/router": "3.1.2",
+        "@angular/common": "2.2.0",
+        "@angular/compiler": "2.2.0",
+        "@angular/core": "2.2.0",
+        "@angular/forms": "2.2.0",
+        "@angular/http": "2.2.0",
+        "@angular/platform-browser": "2.2.0",
+        "@angular/platform-browser-dynamic": "2.2.0",
+        "@angular/router": "3.2.0",
         "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.13",
         "core-js": "^2.4.1",
         "reflect-metadata": "^0.1.3",
-        "rxjs": "5.0.0-rc.1",
-        "zone.js": "^0.6.21",
+        "rxjs": "5.0.0-beta.12",
+        "zone.js": "^0.6.25",
         "font-awesome": "^4.6.3",
         "moment": "^2.15.0",
         "bootstrap": "4.0.0-alpha.4"
