--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "clean-start": "npm run clean-install && npm start",
         "watch": "webpack --watch --progress --profile",
         "build": "rimraf dist && webpack --progress --profile --bail",
-        "server": "webpack-dashboard -- webpack-dev-server --inline --port 8080",
+        "server": "webpack-dev-server --inline --progress --port 8080",
         "webdriver-update": "webdriver-manager update",
         "webdriver-start": "webdriver-manager start",
         "lint": "tslint --force \"src/**/*.ts\"",
@@ -26,19 +26,19 @@
         "postinstall": "npm run webdriver-update"
     },
     "dependencies": {
-        "@angular/common": "2.2.0",
-        "@angular/compiler": "2.2.0",
-        "@angular/core": "2.2.0",
-        "@angular/forms": "2.2.0",
-        "@angular/http": "2.2.0",
-        "@angular/platform-browser": "2.2.0",
-        "@angular/platform-browser-dynamic": "2.2.0",
-        "@angular/router": "3.2.0",
+        "@angular/common": "2.3.1",
+        "@angular/compiler": "2.3.1",
+        "@angular/core": "2.3.1",
+        "@angular/forms": "2.3.1",
+        "@angular/http": "2.3.1",
+        "@angular/platform-browser": "2.3.1",
+        "@angular/platform-browser-dynamic": "2.3.1",
+        "@angular/router": "3.3.1",
         "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.13",
         "core-js": "^2.4.1",
         "reflect-metadata": "^0.1.3",
-        "rxjs": "5.0.0-beta.12",
-        "zone.js": "^0.6.25",
+        "rxjs": "5.0.0-rc.4",
+        "zone.js": "^0.7.2",
         "font-awesome": "^4.6.3",
         "moment": "^2.15.0",
         "bootstrap": "4.0.0-alpha.4"
@@ -53,10 +53,10 @@
         "@types/selenium-webdriver": "2.53.35",
         "angular2-template-loader": "^0.6.0",
         "autoprefixer": "^6.3.2",
-        "awesome-typescript-loader": "^2.2.4",
+        "awesome-typescript-loader": "^3.0.0-beta.17",
         "codelyzer": "1.0.0-beta.3",
         "copy-webpack-plugin": "^4.0.0",
-        "css-loader": "^0.25.0",
+        "css-loader": "^0.26.1",
         "extract-text-webpack-plugin": "^2.0.0-beta.4",
         "file-loader": "^0.9.0",
         "html-loader": "^0.4.0",
@@ -70,29 +70,26 @@
         "karma-coverage": "^1.0.0",
         "karma-jasmine": "^1.0.2",
         "karma-mocha-reporter": "^2.0.3",
-        "karma-phantomjs-launcher": "^1.0.0",
         "karma-remap-istanbul": "0.2.1",
         "karma-sourcemap-loader": "^0.3.7",
         "karma-webpack": "1.8.0",
-        "node-sass": "^3.4.2",
+        "node-sass": "^3.10.1",
         "null-loader": "0.1.1",
-        "phantomjs-prebuilt": "^2.1.4",
         "postcss-loader": "^1.1.1",
         "protractor": "^4.0.11",
         "raw-loader": "0.5.1",
         "remap-istanbul": "^0.7.0",
         "rimraf": "^2.5.1",
-        "sass-loader": "^4.0.0",
+        "sass-loader": "^4.0.2",
         "shelljs": "^0.7.0",
         "style-loader": "^0.13.0",
         "ts-helpers": "^1.1.1",
         "tslint": "^3.4.0",
         "tslint-loader": "^2.1.0",
         "typedoc": "^0.5.1",
-        "typescript": "2.0.9",
+        "typescript": "2.1.4",
         "url-loader": "^0.5.6",
-        "webpack": "^2.1.0-beta.25",
-        "webpack-dashboard": "^0.2.0",
+        "webpack": "2.1.0-beta.25",
         "webpack-dev-server": "2.1.0-beta.9",
         "angular2-router-loader": ""
     }
